split author on first and last name
